<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright 2011 Michael R. Falcone

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">


    <TextView
            android:id="@+id/appNameTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"/>

    <TextView
            android:id="@+id/versionHeaderTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/whats_new_header"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="12dp"/>

    <TextView
            android:id="@+id/whatsNewTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/whats_new"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:gravity="left"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="30dp"/>

    <TextView
            android:id="@+id/ifYouLikeTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ifyoulike"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:gravity="center_horizontal"/>

    <TextView
            android:id="@+id/marketLinkTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/marketlinktext"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:gravity="center_horizontal"
            android:layout_marginBottom="28dp"/>

</LinearLayout>